--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unit10hw",
+  "name": "employee-summary",
   "version": "1.0.0",
   "description": "OOP and testing for week 10 homework",
   "main": "app.js",
